--- a/frontend/src/styles/Thumbnail.module.css
+++ b/frontend/src/styles/Thumbnail.module.css
@@ -110,46 +110,9 @@ width: 100%;
     overflow: hidden;
 }
 
-/* Small devices (landsscape phones) standard */
-/* Medium devices (tablets) */
-@media (max-width: 650px) {
-    .box {
-        min-height: 37rem;
-        align-items: center;
-        justify-content: center;
-        width: 400px;
-        flex-basis: 300px;
-        flex-grow: 1;
-        max-width: 500px;
-        min-width: 300px;
-    }
-
-    .separatorBox {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        min-height: 37rem;  
-        min-width: 300px;  
-    } 
-
-
-
-    #heading {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 4.5rem;
-    }
-
-    h1 {
-        font-size: 2em;
-    }
-}
-
 @media (max-width: 400px) {
     .box{
         width: 95%;
-        padding: 12px;
         margin: 12px auto;
     }
     .thumbnailImage{
